// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Label />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Path
          d="M61.6,168.6l2.6-13.7c0-0.2,0.1-0.4,0.3-0.7c0.6-0.9,1.8-1.1,2.7-0.5c0.9,0.6,0.9,1.5,0.8,2l-2.3,10.5 l8.9-6.1c0.4-0.3,1.3-0.6,2.2,0c0.9,0.6,1.1,1.8,0.5,2.7c-0.2,0.3-0.4,0.4-0.5,0.5l-14,8.8c-3.3,2-6.6,2.9-9.6,0.8 c-0.9-0.6-1.1-1.7-0.5-2.5c0.6-0.9,1.7-1,2.6-0.4C57.1,171.3,59,170.4,61.6,168.6z"
          fill="#D88B25"
        />,
        <Path
          d="M83.1,165l-2.7,8c-0.5,1.6-0.5,3.3,2,4.1c2.5,0.8,3.5-0.5,4.1-2.1l2.7-8c0.3-1,1.4-1.6,2.5-1.2 c1,0.3,1.6,1.4,1.2,2.5l-2.7,8c-1.1,3.3-3.4,6-8.9,4.2c-5.5-1.8-5.7-5.3-4.6-8.7l2.7-8c0.3-1,1.4-1.6,2.5-1.2S83.4,164,83.1,165z"
          fill="#D88B25"
        />,
        <Path
          d="M97.3,181.9c-1.2-1.5-1.7-3.7-1.6-6.6c0.1-2.9,0.9-5,2.3-6.4c1.4-1.4,3.2-2,5.6-1.9c1.4,0.1,2.5,0.4,3.4,1 c0.9,0.6,1.6,1.2,2,1.8c0.2,0.2,0.2,0.5,0.2,0.7c0,0.3-0.1,0.6-0.3,0.7c-0.2,0.2-0.5,0.3-0.8,0.3c-0.3,0-0.6-0.2-0.8-0.5 c-0.9-1.2-2.2-1.8-3.8-1.9c-3.4-0.2-5.2,1.9-5.4,6.3c-0.2,4.4,1.4,6.7,4.7,6.8c1.4,0.1,2.8-0.4,4.2-1.3c0.2-0.2,0.5-0.2,0.7-0.2 c0.3,0,0.5,0.1,0.7,0.3c0.2,0.2,0.3,0.5,0.3,0.8c0,0.3-0.2,0.6-0.5,0.9c-1.6,1.2-3.5,1.8-5.5,1.7 C100.3,184.2,98.5,183.4,97.3,181.9z"
          fill="#D88B25"
        />,
        <Path
          d="M114.1,169c1-1.7,2.6-2.8,5-3.3s4.3-0.2,5.9,0.9c1.6,1.1,2.7,3.1,3.3,5.9c0.6,2.8,0.4,5.1-0.5,6.8 c-1,1.7-2.6,2.8-5,3.3c-2.3,0.5-4.3,0.2-5.9-0.9s-2.7-3.1-3.3-5.9C112.9,172.9,113.1,170.7,114.1,169z M122.3,180.5 c3.4-0.7,4.6-3.3,3.7-7.6c-0.9-4.3-3.1-6-6.5-5.3c-3.4,0.7-4.6,3.3-3.7,7.5C116.8,179.5,118.9,181.3,122.3,180.5z"
          fill="#D88B25"
        />,
        <Path
          d="M129.2,159c-0.8,0.4-1.4,0.1-1.8-0.7c-0.4-0.9-0.2-1.5,0.7-1.9c0.8-0.4,1.4-0.1,1.8,0.8 C130.2,158.1,130,158.7,129.2,159z M132.1,162.7l5.9,13.4c0.1,0.3,0.1,0.6,0,0.9c-0.1,0.3-0.3,0.5-0.6,0.6c-0.3,0.1-0.6,0.1-0.9,0 c-0.3-0.1-0.5-0.3-0.6-0.6l-5.9-13.4c-0.1-0.3-0.1-0.6,0-0.9s0.3-0.5,0.6-0.6c0.3-0.1,0.6-0.1,0.9,0 C131.7,162.2,131.9,162.4,132.1,162.7z"
          fill="#D88B25"
        />,
        <Path
          d="M141.4,155.7c3.6-2.6,6.6-2.1,9.1,1.3l5.6,7.8c0.2,0.3,0.3,0.6,0.2,0.9c-0.1,0.3-0.2,0.5-0.5,0.7 s-0.6,0.3-0.9,0.2c-0.3-0.1-0.5-0.2-0.7-0.5l-5.3-7.4c-0.9-1.3-1.8-2.1-2.8-2.4c-1-0.3-2.1,0-3.5,1c-2.6,1.9-2.9,4.1-1,6.9 l5.2,7.2c0.2,0.3,0.3,0.6,0.2,0.9c-0.1,0.3-0.2,0.6-0.5,0.7c-0.3,0.2-0.5,0.2-0.8,0.2s-0.6-0.2-0.8-0.5l-8.5-11.9 c-0.2-0.3-0.3-0.6-0.2-0.9c0.1-0.3,0.2-0.6,0.5-0.7c0.3-0.2,0.5-0.2,0.8-0.2c0.3,0,0.6,0.2,0.8,0.5l0.7,0.9 c-0.1-0.8,0-1.6,0.4-2.5S140.5,156.3,141.4,155.7z"
          fill="#D88B25"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M61.6,168.6l2.6-13.7c0-0.2,0.1-0.4,0.3-0.7c0.6-0.9,1.8-1.1,2.7-0.5c0.9,0.6,0.9,1.5,0.8,2l-2.3,10.5 l8.9-6.1c0.4-0.3,1.3-0.6,2.2,0c0.9,0.6,1.1,1.8,0.5,2.7c-0.2,0.3-0.4,0.4-0.5,0.5l-14,8.8c-3.3,2-6.6,2.9-9.6,0.8 c-0.9-0.6-1.1-1.7-0.5-2.5c0.6-0.9,1.7-1,2.6-0.4C57.1,171.3,59,170.4,61.6,168.6z",
          "fill": "#D88B25",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M83.1,165l-2.7,8c-0.5,1.6-0.5,3.3,2,4.1c2.5,0.8,3.5-0.5,4.1-2.1l2.7-8c0.3-1,1.4-1.6,2.5-1.2 c1,0.3,1.6,1.4,1.2,2.5l-2.7,8c-1.1,3.3-3.4,6-8.9,4.2c-5.5-1.8-5.7-5.3-4.6-8.7l2.7-8c0.3-1,1.4-1.6,2.5-1.2S83.4,164,83.1,165z",
          "fill": "#D88B25",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M97.3,181.9c-1.2-1.5-1.7-3.7-1.6-6.6c0.1-2.9,0.9-5,2.3-6.4c1.4-1.4,3.2-2,5.6-1.9c1.4,0.1,2.5,0.4,3.4,1 c0.9,0.6,1.6,1.2,2,1.8c0.2,0.2,0.2,0.5,0.2,0.7c0,0.3-0.1,0.6-0.3,0.7c-0.2,0.2-0.5,0.3-0.8,0.3c-0.3,0-0.6-0.2-0.8-0.5 c-0.9-1.2-2.2-1.8-3.8-1.9c-3.4-0.2-5.2,1.9-5.4,6.3c-0.2,4.4,1.4,6.7,4.7,6.8c1.4,0.1,2.8-0.4,4.2-1.3c0.2-0.2,0.5-0.2,0.7-0.2 c0.3,0,0.5,0.1,0.7,0.3c0.2,0.2,0.3,0.5,0.3,0.8c0,0.3-0.2,0.6-0.5,0.9c-1.6,1.2-3.5,1.8-5.5,1.7 C100.3,184.2,98.5,183.4,97.3,181.9z",
          "fill": "#D88B25",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M114.1,169c1-1.7,2.6-2.8,5-3.3s4.3-0.2,5.9,0.9c1.6,1.1,2.7,3.1,3.3,5.9c0.6,2.8,0.4,5.1-0.5,6.8 c-1,1.7-2.6,2.8-5,3.3c-2.3,0.5-4.3,0.2-5.9-0.9s-2.7-3.1-3.3-5.9C112.9,172.9,113.1,170.7,114.1,169z M122.3,180.5 c3.4-0.7,4.6-3.3,3.7-7.6c-0.9-4.3-3.1-6-6.5-5.3c-3.4,0.7-4.6,3.3-3.7,7.5C116.8,179.5,118.9,181.3,122.3,180.5z",
          "fill": "#D88B25",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M129.2,159c-0.8,0.4-1.4,0.1-1.8-0.7c-0.4-0.9-0.2-1.5,0.7-1.9c0.8-0.4,1.4-0.1,1.8,0.8 C130.2,158.1,130,158.7,129.2,159z M132.1,162.7l5.9,13.4c0.1,0.3,0.1,0.6,0,0.9c-0.1,0.3-0.3,0.5-0.6,0.6c-0.3,0.1-0.6,0.1-0.9,0 c-0.3-0.1-0.5-0.3-0.6-0.6l-5.9-13.4c-0.1-0.3-0.1-0.6,0-0.9s0.3-0.5,0.6-0.6c0.3-0.1,0.6-0.1,0.9,0 C131.7,162.2,131.9,162.4,132.1,162.7z",
          "fill": "#D88B25",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M141.4,155.7c3.6-2.6,6.6-2.1,9.1,1.3l5.6,7.8c0.2,0.3,0.3,0.6,0.2,0.9c-0.1,0.3-0.2,0.5-0.5,0.7 s-0.6,0.3-0.9,0.2c-0.3-0.1-0.5-0.2-0.7-0.5l-5.3-7.4c-0.9-1.3-1.8-2.1-2.8-2.4c-1-0.3-2.1,0-3.5,1c-2.6,1.9-2.9,4.1-1,6.9 l5.2,7.2c0.2,0.3,0.3,0.6,0.2,0.9c-0.1,0.3-0.2,0.6-0.5,0.7c-0.3,0.2-0.5,0.2-0.8,0.2s-0.6-0.2-0.8-0.5l-8.5-11.9 c-0.2-0.3-0.3-0.6-0.2-0.9c0.1-0.3,0.2-0.6,0.5-0.7c0.3-0.2,0.5-0.2,0.8-0.2c0.3,0,0.6,0.2,0.8,0.5l0.7,0.9 c-0.1-0.8,0-1.6,0.4-2.5S140.5,156.3,141.4,155.7z",
          "fill": "#D88B25",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M61.6,168.6l2.6-13.7c0-0.2,0.1-0.4,0.3-0.7c0.6-0.9,1.8-1.1,2.7-0.5c0.9,0.6,0.9,1.5,0.8,2l-2.3,10.5 l8.9-6.1c0.4-0.3,1.3-0.6,2.2,0c0.9,0.6,1.1,1.8,0.5,2.7c-0.2,0.3-0.4,0.4-0.5,0.5l-14,8.8c-3.3,2-6.6,2.9-9.6,0.8 c-0.9-0.6-1.1-1.7-0.5-2.5c0.6-0.9,1.7-1,2.6-0.4C57.1,171.3,59,170.4,61.6,168.6z"
            fill="#D88B25"
          />,
          <Path
            d="M83.1,165l-2.7,8c-0.5,1.6-0.5,3.3,2,4.1c2.5,0.8,3.5-0.5,4.1-2.1l2.7-8c0.3-1,1.4-1.6,2.5-1.2 c1,0.3,1.6,1.4,1.2,2.5l-2.7,8c-1.1,3.3-3.4,6-8.9,4.2c-5.5-1.8-5.7-5.3-4.6-8.7l2.7-8c0.3-1,1.4-1.6,2.5-1.2S83.4,164,83.1,165z"
            fill="#D88B25"
          />,
          <Path
            d="M97.3,181.9c-1.2-1.5-1.7-3.7-1.6-6.6c0.1-2.9,0.9-5,2.3-6.4c1.4-1.4,3.2-2,5.6-1.9c1.4,0.1,2.5,0.4,3.4,1 c0.9,0.6,1.6,1.2,2,1.8c0.2,0.2,0.2,0.5,0.2,0.7c0,0.3-0.1,0.6-0.3,0.7c-0.2,0.2-0.5,0.3-0.8,0.3c-0.3,0-0.6-0.2-0.8-0.5 c-0.9-1.2-2.2-1.8-3.8-1.9c-3.4-0.2-5.2,1.9-5.4,6.3c-0.2,4.4,1.4,6.7,4.7,6.8c1.4,0.1,2.8-0.4,4.2-1.3c0.2-0.2,0.5-0.2,0.7-0.2 c0.3,0,0.5,0.1,0.7,0.3c0.2,0.2,0.3,0.5,0.3,0.8c0,0.3-0.2,0.6-0.5,0.9c-1.6,1.2-3.5,1.8-5.5,1.7 C100.3,184.2,98.5,183.4,97.3,181.9z"
            fill="#D88B25"
          />,
          <Path
            d="M114.1,169c1-1.7,2.6-2.8,5-3.3s4.3-0.2,5.9,0.9c1.6,1.1,2.7,3.1,3.3,5.9c0.6,2.8,0.4,5.1-0.5,6.8 c-1,1.7-2.6,2.8-5,3.3c-2.3,0.5-4.3,0.2-5.9-0.9s-2.7-3.1-3.3-5.9C112.9,172.9,113.1,170.7,114.1,169z M122.3,180.5 c3.4-0.7,4.6-3.3,3.7-7.6c-0.9-4.3-3.1-6-6.5-5.3c-3.4,0.7-4.6,3.3-3.7,7.5C116.8,179.5,118.9,181.3,122.3,180.5z"
            fill="#D88B25"
          />,
          <Path
            d="M129.2,159c-0.8,0.4-1.4,0.1-1.8-0.7c-0.4-0.9-0.2-1.5,0.7-1.9c0.8-0.4,1.4-0.1,1.8,0.8 C130.2,158.1,130,158.7,129.2,159z M132.1,162.7l5.9,13.4c0.1,0.3,0.1,0.6,0,0.9c-0.1,0.3-0.3,0.5-0.6,0.6c-0.3,0.1-0.6,0.1-0.9,0 c-0.3-0.1-0.5-0.3-0.6-0.6l-5.9-13.4c-0.1-0.3-0.1-0.6,0-0.9s0.3-0.5,0.6-0.6c0.3-0.1,0.6-0.1,0.9,0 C131.7,162.2,131.9,162.4,132.1,162.7z"
            fill="#D88B25"
          />,
          <Path
            d="M141.4,155.7c3.6-2.6,6.6-2.1,9.1,1.3l5.6,7.8c0.2,0.3,0.3,0.6,0.2,0.9c-0.1,0.3-0.2,0.5-0.5,0.7 s-0.6,0.3-0.9,0.2c-0.3-0.1-0.5-0.2-0.7-0.5l-5.3-7.4c-0.9-1.3-1.8-2.1-2.8-2.4c-1-0.3-2.1,0-3.5,1c-2.6,1.9-2.9,4.1-1,6.9 l5.2,7.2c0.2,0.3,0.3,0.6,0.2,0.9c-0.1,0.3-0.2,0.6-0.5,0.7c-0.3,0.2-0.5,0.2-0.8,0.2s-0.6-0.2-0.8-0.5l-8.5-11.9 c-0.2-0.3-0.3-0.6-0.2-0.9c0.1-0.3,0.2-0.6,0.5-0.7c0.3-0.2,0.5-0.2,0.8-0.2c0.3,0,0.6,0.2,0.8,0.5l0.7,0.9 c-0.1-0.8,0-1.6,0.4-2.5S140.5,156.3,141.4,155.7z"
            fill="#D88B25"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M61.6,168.6l2.6-13.7c0-0.2,0.1-0.4,0.3-0.7c0.6-0.9,1.8-1.1,2.7-0.5c0.9,0.6,0.9,1.5,0.8,2l-2.3,10.5 l8.9-6.1c0.4-0.3,1.3-0.6,2.2,0c0.9,0.6,1.1,1.8,0.5,2.7c-0.2,0.3-0.4,0.4-0.5,0.5l-14,8.8c-3.3,2-6.6,2.9-9.6,0.8 c-0.9-0.6-1.1-1.7-0.5-2.5c0.6-0.9,1.7-1,2.6-0.4C57.1,171.3,59,170.4,61.6,168.6z",
            "fill": "#D88B25",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M83.1,165l-2.7,8c-0.5,1.6-0.5,3.3,2,4.1c2.5,0.8,3.5-0.5,4.1-2.1l2.7-8c0.3-1,1.4-1.6,2.5-1.2 c1,0.3,1.6,1.4,1.2,2.5l-2.7,8c-1.1,3.3-3.4,6-8.9,4.2c-5.5-1.8-5.7-5.3-4.6-8.7l2.7-8c0.3-1,1.4-1.6,2.5-1.2S83.4,164,83.1,165z",
            "fill": "#D88B25",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M97.3,181.9c-1.2-1.5-1.7-3.7-1.6-6.6c0.1-2.9,0.9-5,2.3-6.4c1.4-1.4,3.2-2,5.6-1.9c1.4,0.1,2.5,0.4,3.4,1 c0.9,0.6,1.6,1.2,2,1.8c0.2,0.2,0.2,0.5,0.2,0.7c0,0.3-0.1,0.6-0.3,0.7c-0.2,0.2-0.5,0.3-0.8,0.3c-0.3,0-0.6-0.2-0.8-0.5 c-0.9-1.2-2.2-1.8-3.8-1.9c-3.4-0.2-5.2,1.9-5.4,6.3c-0.2,4.4,1.4,6.7,4.7,6.8c1.4,0.1,2.8-0.4,4.2-1.3c0.2-0.2,0.5-0.2,0.7-0.2 c0.3,0,0.5,0.1,0.7,0.3c0.2,0.2,0.3,0.5,0.3,0.8c0,0.3-0.2,0.6-0.5,0.9c-1.6,1.2-3.5,1.8-5.5,1.7 C100.3,184.2,98.5,183.4,97.3,181.9z",
            "fill": "#D88B25",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M114.1,169c1-1.7,2.6-2.8,5-3.3s4.3-0.2,5.9,0.9c1.6,1.1,2.7,3.1,3.3,5.9c0.6,2.8,0.4,5.1-0.5,6.8 c-1,1.7-2.6,2.8-5,3.3c-2.3,0.5-4.3,0.2-5.9-0.9s-2.7-3.1-3.3-5.9C112.9,172.9,113.1,170.7,114.1,169z M122.3,180.5 c3.4-0.7,4.6-3.3,3.7-7.6c-0.9-4.3-3.1-6-6.5-5.3c-3.4,0.7-4.6,3.3-3.7,7.5C116.8,179.5,118.9,181.3,122.3,180.5z",
            "fill": "#D88B25",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M129.2,159c-0.8,0.4-1.4,0.1-1.8-0.7c-0.4-0.9-0.2-1.5,0.7-1.9c0.8-0.4,1.4-0.1,1.8,0.8 C130.2,158.1,130,158.7,129.2,159z M132.1,162.7l5.9,13.4c0.1,0.3,0.1,0.6,0,0.9c-0.1,0.3-0.3,0.5-0.6,0.6c-0.3,0.1-0.6,0.1-0.9,0 c-0.3-0.1-0.5-0.3-0.6-0.6l-5.9-13.4c-0.1-0.3-0.1-0.6,0-0.9s0.3-0.5,0.6-0.6c0.3-0.1,0.6-0.1,0.9,0 C131.7,162.2,131.9,162.4,132.1,162.7z",
            "fill": "#D88B25",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M141.4,155.7c3.6-2.6,6.6-2.1,9.1,1.3l5.6,7.8c0.2,0.3,0.3,0.6,0.2,0.9c-0.1,0.3-0.2,0.5-0.5,0.7 s-0.6,0.3-0.9,0.2c-0.3-0.1-0.5-0.2-0.7-0.5l-5.3-7.4c-0.9-1.3-1.8-2.1-2.8-2.4c-1-0.3-2.1,0-3.5,1c-2.6,1.9-2.9,4.1-1,6.9 l5.2,7.2c0.2,0.3,0.3,0.6,0.2,0.9c-0.1,0.3-0.2,0.6-0.5,0.7c-0.3,0.2-0.5,0.2-0.8,0.2s-0.6-0.2-0.8-0.5l-8.5-11.9 c-0.2-0.3-0.3-0.6-0.2-0.9c0.1-0.3,0.2-0.6,0.5-0.7c0.3-0.2,0.5-0.2,0.8-0.2c0.3,0,0.6,0.2,0.8,0.5l0.7,0.9 c-0.1-0.8,0-1.6,0.4-2.5S140.5,156.3,141.4,155.7z",
            "fill": "#D88B25",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Label should render as grayscale 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Label
    isGrayScale={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Path
          d="M61.6,168.6l2.6-13.7c0-0.2,0.1-0.4,0.3-0.7c0.6-0.9,1.8-1.1,2.7-0.5c0.9,0.6,0.9,1.5,0.8,2l-2.3,10.5 l8.9-6.1c0.4-0.3,1.3-0.6,2.2,0c0.9,0.6,1.1,1.8,0.5,2.7c-0.2,0.3-0.4,0.4-0.5,0.5l-14,8.8c-3.3,2-6.6,2.9-9.6,0.8 c-0.9-0.6-1.1-1.7-0.5-2.5c0.6-0.9,1.7-1,2.6-0.4C57.1,171.3,59,170.4,61.6,168.6z"
          fill="#7f7f7f"
        />,
        <Path
          d="M83.1,165l-2.7,8c-0.5,1.6-0.5,3.3,2,4.1c2.5,0.8,3.5-0.5,4.1-2.1l2.7-8c0.3-1,1.4-1.6,2.5-1.2 c1,0.3,1.6,1.4,1.2,2.5l-2.7,8c-1.1,3.3-3.4,6-8.9,4.2c-5.5-1.8-5.7-5.3-4.6-8.7l2.7-8c0.3-1,1.4-1.6,2.5-1.2S83.4,164,83.1,165z"
          fill="#7f7f7f"
        />,
        <Path
          d="M97.3,181.9c-1.2-1.5-1.7-3.7-1.6-6.6c0.1-2.9,0.9-5,2.3-6.4c1.4-1.4,3.2-2,5.6-1.9c1.4,0.1,2.5,0.4,3.4,1 c0.9,0.6,1.6,1.2,2,1.8c0.2,0.2,0.2,0.5,0.2,0.7c0,0.3-0.1,0.6-0.3,0.7c-0.2,0.2-0.5,0.3-0.8,0.3c-0.3,0-0.6-0.2-0.8-0.5 c-0.9-1.2-2.2-1.8-3.8-1.9c-3.4-0.2-5.2,1.9-5.4,6.3c-0.2,4.4,1.4,6.7,4.7,6.8c1.4,0.1,2.8-0.4,4.2-1.3c0.2-0.2,0.5-0.2,0.7-0.2 c0.3,0,0.5,0.1,0.7,0.3c0.2,0.2,0.3,0.5,0.3,0.8c0,0.3-0.2,0.6-0.5,0.9c-1.6,1.2-3.5,1.8-5.5,1.7 C100.3,184.2,98.5,183.4,97.3,181.9z"
          fill="#7f7f7f"
        />,
        <Path
          d="M114.1,169c1-1.7,2.6-2.8,5-3.3s4.3-0.2,5.9,0.9c1.6,1.1,2.7,3.1,3.3,5.9c0.6,2.8,0.4,5.1-0.5,6.8 c-1,1.7-2.6,2.8-5,3.3c-2.3,0.5-4.3,0.2-5.9-0.9s-2.7-3.1-3.3-5.9C112.9,172.9,113.1,170.7,114.1,169z M122.3,180.5 c3.4-0.7,4.6-3.3,3.7-7.6c-0.9-4.3-3.1-6-6.5-5.3c-3.4,0.7-4.6,3.3-3.7,7.5C116.8,179.5,118.9,181.3,122.3,180.5z"
          fill="#7f7f7f"
        />,
        <Path
          d="M129.2,159c-0.8,0.4-1.4,0.1-1.8-0.7c-0.4-0.9-0.2-1.5,0.7-1.9c0.8-0.4,1.4-0.1,1.8,0.8 C130.2,158.1,130,158.7,129.2,159z M132.1,162.7l5.9,13.4c0.1,0.3,0.1,0.6,0,0.9c-0.1,0.3-0.3,0.5-0.6,0.6c-0.3,0.1-0.6,0.1-0.9,0 c-0.3-0.1-0.5-0.3-0.6-0.6l-5.9-13.4c-0.1-0.3-0.1-0.6,0-0.9s0.3-0.5,0.6-0.6c0.3-0.1,0.6-0.1,0.9,0 C131.7,162.2,131.9,162.4,132.1,162.7z"
          fill="#7f7f7f"
        />,
        <Path
          d="M141.4,155.7c3.6-2.6,6.6-2.1,9.1,1.3l5.6,7.8c0.2,0.3,0.3,0.6,0.2,0.9c-0.1,0.3-0.2,0.5-0.5,0.7 s-0.6,0.3-0.9,0.2c-0.3-0.1-0.5-0.2-0.7-0.5l-5.3-7.4c-0.9-1.3-1.8-2.1-2.8-2.4c-1-0.3-2.1,0-3.5,1c-2.6,1.9-2.9,4.1-1,6.9 l5.2,7.2c0.2,0.3,0.3,0.6,0.2,0.9c-0.1,0.3-0.2,0.6-0.5,0.7c-0.3,0.2-0.5,0.2-0.8,0.2s-0.6-0.2-0.8-0.5l-8.5-11.9 c-0.2-0.3-0.3-0.6-0.2-0.9c0.1-0.3,0.2-0.6,0.5-0.7c0.3-0.2,0.5-0.2,0.8-0.2c0.3,0,0.6,0.2,0.8,0.5l0.7,0.9 c-0.1-0.8,0-1.6,0.4-2.5S140.5,156.3,141.4,155.7z"
          fill="#7f7f7f"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M61.6,168.6l2.6-13.7c0-0.2,0.1-0.4,0.3-0.7c0.6-0.9,1.8-1.1,2.7-0.5c0.9,0.6,0.9,1.5,0.8,2l-2.3,10.5 l8.9-6.1c0.4-0.3,1.3-0.6,2.2,0c0.9,0.6,1.1,1.8,0.5,2.7c-0.2,0.3-0.4,0.4-0.5,0.5l-14,8.8c-3.3,2-6.6,2.9-9.6,0.8 c-0.9-0.6-1.1-1.7-0.5-2.5c0.6-0.9,1.7-1,2.6-0.4C57.1,171.3,59,170.4,61.6,168.6z",
          "fill": "#7f7f7f",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M83.1,165l-2.7,8c-0.5,1.6-0.5,3.3,2,4.1c2.5,0.8,3.5-0.5,4.1-2.1l2.7-8c0.3-1,1.4-1.6,2.5-1.2 c1,0.3,1.6,1.4,1.2,2.5l-2.7,8c-1.1,3.3-3.4,6-8.9,4.2c-5.5-1.8-5.7-5.3-4.6-8.7l2.7-8c0.3-1,1.4-1.6,2.5-1.2S83.4,164,83.1,165z",
          "fill": "#7f7f7f",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M97.3,181.9c-1.2-1.5-1.7-3.7-1.6-6.6c0.1-2.9,0.9-5,2.3-6.4c1.4-1.4,3.2-2,5.6-1.9c1.4,0.1,2.5,0.4,3.4,1 c0.9,0.6,1.6,1.2,2,1.8c0.2,0.2,0.2,0.5,0.2,0.7c0,0.3-0.1,0.6-0.3,0.7c-0.2,0.2-0.5,0.3-0.8,0.3c-0.3,0-0.6-0.2-0.8-0.5 c-0.9-1.2-2.2-1.8-3.8-1.9c-3.4-0.2-5.2,1.9-5.4,6.3c-0.2,4.4,1.4,6.7,4.7,6.8c1.4,0.1,2.8-0.4,4.2-1.3c0.2-0.2,0.5-0.2,0.7-0.2 c0.3,0,0.5,0.1,0.7,0.3c0.2,0.2,0.3,0.5,0.3,0.8c0,0.3-0.2,0.6-0.5,0.9c-1.6,1.2-3.5,1.8-5.5,1.7 C100.3,184.2,98.5,183.4,97.3,181.9z",
          "fill": "#7f7f7f",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M114.1,169c1-1.7,2.6-2.8,5-3.3s4.3-0.2,5.9,0.9c1.6,1.1,2.7,3.1,3.3,5.9c0.6,2.8,0.4,5.1-0.5,6.8 c-1,1.7-2.6,2.8-5,3.3c-2.3,0.5-4.3,0.2-5.9-0.9s-2.7-3.1-3.3-5.9C112.9,172.9,113.1,170.7,114.1,169z M122.3,180.5 c3.4-0.7,4.6-3.3,3.7-7.6c-0.9-4.3-3.1-6-6.5-5.3c-3.4,0.7-4.6,3.3-3.7,7.5C116.8,179.5,118.9,181.3,122.3,180.5z",
          "fill": "#7f7f7f",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M129.2,159c-0.8,0.4-1.4,0.1-1.8-0.7c-0.4-0.9-0.2-1.5,0.7-1.9c0.8-0.4,1.4-0.1,1.8,0.8 C130.2,158.1,130,158.7,129.2,159z M132.1,162.7l5.9,13.4c0.1,0.3,0.1,0.6,0,0.9c-0.1,0.3-0.3,0.5-0.6,0.6c-0.3,0.1-0.6,0.1-0.9,0 c-0.3-0.1-0.5-0.3-0.6-0.6l-5.9-13.4c-0.1-0.3-0.1-0.6,0-0.9s0.3-0.5,0.6-0.6c0.3-0.1,0.6-0.1,0.9,0 C131.7,162.2,131.9,162.4,132.1,162.7z",
          "fill": "#7f7f7f",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M141.4,155.7c3.6-2.6,6.6-2.1,9.1,1.3l5.6,7.8c0.2,0.3,0.3,0.6,0.2,0.9c-0.1,0.3-0.2,0.5-0.5,0.7 s-0.6,0.3-0.9,0.2c-0.3-0.1-0.5-0.2-0.7-0.5l-5.3-7.4c-0.9-1.3-1.8-2.1-2.8-2.4c-1-0.3-2.1,0-3.5,1c-2.6,1.9-2.9,4.1-1,6.9 l5.2,7.2c0.2,0.3,0.3,0.6,0.2,0.9c-0.1,0.3-0.2,0.6-0.5,0.7c-0.3,0.2-0.5,0.2-0.8,0.2s-0.6-0.2-0.8-0.5l-8.5-11.9 c-0.2-0.3-0.3-0.6-0.2-0.9c0.1-0.3,0.2-0.6,0.5-0.7c0.3-0.2,0.5-0.2,0.8-0.2c0.3,0,0.6,0.2,0.8,0.5l0.7,0.9 c-0.1-0.8,0-1.6,0.4-2.5S140.5,156.3,141.4,155.7z",
          "fill": "#7f7f7f",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M61.6,168.6l2.6-13.7c0-0.2,0.1-0.4,0.3-0.7c0.6-0.9,1.8-1.1,2.7-0.5c0.9,0.6,0.9,1.5,0.8,2l-2.3,10.5 l8.9-6.1c0.4-0.3,1.3-0.6,2.2,0c0.9,0.6,1.1,1.8,0.5,2.7c-0.2,0.3-0.4,0.4-0.5,0.5l-14,8.8c-3.3,2-6.6,2.9-9.6,0.8 c-0.9-0.6-1.1-1.7-0.5-2.5c0.6-0.9,1.7-1,2.6-0.4C57.1,171.3,59,170.4,61.6,168.6z"
            fill="#7f7f7f"
          />,
          <Path
            d="M83.1,165l-2.7,8c-0.5,1.6-0.5,3.3,2,4.1c2.5,0.8,3.5-0.5,4.1-2.1l2.7-8c0.3-1,1.4-1.6,2.5-1.2 c1,0.3,1.6,1.4,1.2,2.5l-2.7,8c-1.1,3.3-3.4,6-8.9,4.2c-5.5-1.8-5.7-5.3-4.6-8.7l2.7-8c0.3-1,1.4-1.6,2.5-1.2S83.4,164,83.1,165z"
            fill="#7f7f7f"
          />,
          <Path
            d="M97.3,181.9c-1.2-1.5-1.7-3.7-1.6-6.6c0.1-2.9,0.9-5,2.3-6.4c1.4-1.4,3.2-2,5.6-1.9c1.4,0.1,2.5,0.4,3.4,1 c0.9,0.6,1.6,1.2,2,1.8c0.2,0.2,0.2,0.5,0.2,0.7c0,0.3-0.1,0.6-0.3,0.7c-0.2,0.2-0.5,0.3-0.8,0.3c-0.3,0-0.6-0.2-0.8-0.5 c-0.9-1.2-2.2-1.8-3.8-1.9c-3.4-0.2-5.2,1.9-5.4,6.3c-0.2,4.4,1.4,6.7,4.7,6.8c1.4,0.1,2.8-0.4,4.2-1.3c0.2-0.2,0.5-0.2,0.7-0.2 c0.3,0,0.5,0.1,0.7,0.3c0.2,0.2,0.3,0.5,0.3,0.8c0,0.3-0.2,0.6-0.5,0.9c-1.6,1.2-3.5,1.8-5.5,1.7 C100.3,184.2,98.5,183.4,97.3,181.9z"
            fill="#7f7f7f"
          />,
          <Path
            d="M114.1,169c1-1.7,2.6-2.8,5-3.3s4.3-0.2,5.9,0.9c1.6,1.1,2.7,3.1,3.3,5.9c0.6,2.8,0.4,5.1-0.5,6.8 c-1,1.7-2.6,2.8-5,3.3c-2.3,0.5-4.3,0.2-5.9-0.9s-2.7-3.1-3.3-5.9C112.9,172.9,113.1,170.7,114.1,169z M122.3,180.5 c3.4-0.7,4.6-3.3,3.7-7.6c-0.9-4.3-3.1-6-6.5-5.3c-3.4,0.7-4.6,3.3-3.7,7.5C116.8,179.5,118.9,181.3,122.3,180.5z"
            fill="#7f7f7f"
          />,
          <Path
            d="M129.2,159c-0.8,0.4-1.4,0.1-1.8-0.7c-0.4-0.9-0.2-1.5,0.7-1.9c0.8-0.4,1.4-0.1,1.8,0.8 C130.2,158.1,130,158.7,129.2,159z M132.1,162.7l5.9,13.4c0.1,0.3,0.1,0.6,0,0.9c-0.1,0.3-0.3,0.5-0.6,0.6c-0.3,0.1-0.6,0.1-0.9,0 c-0.3-0.1-0.5-0.3-0.6-0.6l-5.9-13.4c-0.1-0.3-0.1-0.6,0-0.9s0.3-0.5,0.6-0.6c0.3-0.1,0.6-0.1,0.9,0 C131.7,162.2,131.9,162.4,132.1,162.7z"
            fill="#7f7f7f"
          />,
          <Path
            d="M141.4,155.7c3.6-2.6,6.6-2.1,9.1,1.3l5.6,7.8c0.2,0.3,0.3,0.6,0.2,0.9c-0.1,0.3-0.2,0.5-0.5,0.7 s-0.6,0.3-0.9,0.2c-0.3-0.1-0.5-0.2-0.7-0.5l-5.3-7.4c-0.9-1.3-1.8-2.1-2.8-2.4c-1-0.3-2.1,0-3.5,1c-2.6,1.9-2.9,4.1-1,6.9 l5.2,7.2c0.2,0.3,0.3,0.6,0.2,0.9c-0.1,0.3-0.2,0.6-0.5,0.7c-0.3,0.2-0.5,0.2-0.8,0.2s-0.6-0.2-0.8-0.5l-8.5-11.9 c-0.2-0.3-0.3-0.6-0.2-0.9c0.1-0.3,0.2-0.6,0.5-0.7c0.3-0.2,0.5-0.2,0.8-0.2c0.3,0,0.6,0.2,0.8,0.5l0.7,0.9 c-0.1-0.8,0-1.6,0.4-2.5S140.5,156.3,141.4,155.7z"
            fill="#7f7f7f"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M61.6,168.6l2.6-13.7c0-0.2,0.1-0.4,0.3-0.7c0.6-0.9,1.8-1.1,2.7-0.5c0.9,0.6,0.9,1.5,0.8,2l-2.3,10.5 l8.9-6.1c0.4-0.3,1.3-0.6,2.2,0c0.9,0.6,1.1,1.8,0.5,2.7c-0.2,0.3-0.4,0.4-0.5,0.5l-14,8.8c-3.3,2-6.6,2.9-9.6,0.8 c-0.9-0.6-1.1-1.7-0.5-2.5c0.6-0.9,1.7-1,2.6-0.4C57.1,171.3,59,170.4,61.6,168.6z",
            "fill": "#7f7f7f",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M83.1,165l-2.7,8c-0.5,1.6-0.5,3.3,2,4.1c2.5,0.8,3.5-0.5,4.1-2.1l2.7-8c0.3-1,1.4-1.6,2.5-1.2 c1,0.3,1.6,1.4,1.2,2.5l-2.7,8c-1.1,3.3-3.4,6-8.9,4.2c-5.5-1.8-5.7-5.3-4.6-8.7l2.7-8c0.3-1,1.4-1.6,2.5-1.2S83.4,164,83.1,165z",
            "fill": "#7f7f7f",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M97.3,181.9c-1.2-1.5-1.7-3.7-1.6-6.6c0.1-2.9,0.9-5,2.3-6.4c1.4-1.4,3.2-2,5.6-1.9c1.4,0.1,2.5,0.4,3.4,1 c0.9,0.6,1.6,1.2,2,1.8c0.2,0.2,0.2,0.5,0.2,0.7c0,0.3-0.1,0.6-0.3,0.7c-0.2,0.2-0.5,0.3-0.8,0.3c-0.3,0-0.6-0.2-0.8-0.5 c-0.9-1.2-2.2-1.8-3.8-1.9c-3.4-0.2-5.2,1.9-5.4,6.3c-0.2,4.4,1.4,6.7,4.7,6.8c1.4,0.1,2.8-0.4,4.2-1.3c0.2-0.2,0.5-0.2,0.7-0.2 c0.3,0,0.5,0.1,0.7,0.3c0.2,0.2,0.3,0.5,0.3,0.8c0,0.3-0.2,0.6-0.5,0.9c-1.6,1.2-3.5,1.8-5.5,1.7 C100.3,184.2,98.5,183.4,97.3,181.9z",
            "fill": "#7f7f7f",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M114.1,169c1-1.7,2.6-2.8,5-3.3s4.3-0.2,5.9,0.9c1.6,1.1,2.7,3.1,3.3,5.9c0.6,2.8,0.4,5.1-0.5,6.8 c-1,1.7-2.6,2.8-5,3.3c-2.3,0.5-4.3,0.2-5.9-0.9s-2.7-3.1-3.3-5.9C112.9,172.9,113.1,170.7,114.1,169z M122.3,180.5 c3.4-0.7,4.6-3.3,3.7-7.6c-0.9-4.3-3.1-6-6.5-5.3c-3.4,0.7-4.6,3.3-3.7,7.5C116.8,179.5,118.9,181.3,122.3,180.5z",
            "fill": "#7f7f7f",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M129.2,159c-0.8,0.4-1.4,0.1-1.8-0.7c-0.4-0.9-0.2-1.5,0.7-1.9c0.8-0.4,1.4-0.1,1.8,0.8 C130.2,158.1,130,158.7,129.2,159z M132.1,162.7l5.9,13.4c0.1,0.3,0.1,0.6,0,0.9c-0.1,0.3-0.3,0.5-0.6,0.6c-0.3,0.1-0.6,0.1-0.9,0 c-0.3-0.1-0.5-0.3-0.6-0.6l-5.9-13.4c-0.1-0.3-0.1-0.6,0-0.9s0.3-0.5,0.6-0.6c0.3-0.1,0.6-0.1,0.9,0 C131.7,162.2,131.9,162.4,132.1,162.7z",
            "fill": "#7f7f7f",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M141.4,155.7c3.6-2.6,6.6-2.1,9.1,1.3l5.6,7.8c0.2,0.3,0.3,0.6,0.2,0.9c-0.1,0.3-0.2,0.5-0.5,0.7 s-0.6,0.3-0.9,0.2c-0.3-0.1-0.5-0.2-0.7-0.5l-5.3-7.4c-0.9-1.3-1.8-2.1-2.8-2.4c-1-0.3-2.1,0-3.5,1c-2.6,1.9-2.9,4.1-1,6.9 l5.2,7.2c0.2,0.3,0.3,0.6,0.2,0.9c-0.1,0.3-0.2,0.6-0.5,0.7c-0.3,0.2-0.5,0.2-0.8,0.2s-0.6-0.2-0.8-0.5l-8.5-11.9 c-0.2-0.3-0.3-0.6-0.2-0.9c0.1-0.3,0.2-0.6,0.5-0.7c0.3-0.2,0.5-0.2,0.8-0.2c0.3,0,0.6,0.2,0.8,0.5l0.7,0.9 c-0.1-0.8,0-1.6,0.4-2.5S140.5,156.3,141.4,155.7z",
            "fill": "#7f7f7f",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
